Moved "Options" box to the bottom right side
Added "Show All Lone Pairs" to the Teacher menu
# 1.02.04 (61078) Feb 7, 2012
Fixed: The first tab needs to read "model" while the second tab reads 'real molecules'
# 1.02.03 (61076) Feb 7, 2012
Renamed tab 1 to "Model"
Tab 2: Removed "show outer lone pairs" checkbox
# 1.02.02 (61032) Feb 6, 2012
Simsharing: Updated tab messages
# 1.02.01 (61024) Feb 5, 2012
# 1.02.00 (60769) Jan 30, 2012
> Added "Basics" version
# 1.01.17 (60662) Jan 26, 2012
Removed 2nd tab versions for a testable/publishable version
1/18/12 replace duplicate Teacher menu with MoleculeShapesTeacherMenu, a specialization of the phetcommon menu (so we don't have to address sim-sharing twice)
Real/Model radio buttons horizontal on the dropdown tab
Removed BeCl2
Changed the ordering of molecules in the dropdown tab
1/3/11 #3202, sim-sharing changes related to Swing controls
# 1.01.16 (59280) Dec 12, 2011
Added developer options to show/hide 2nd tab versions.
Fixed radio button multiple-clicking bug
Text change to "Show Outer Lone Pairs"
# 1.01.15 (59263) Dec 12, 2011
Removed "study" versions (for now). OK'ed with SR
Slight change to 2nd tab scale (compromise between small molecule angle visibility and large molecule terminal lone pair visibility)
Added terminal lone pairs
A few other bond length fixes
"Model" bond lengths on 2nd tab correspond to the "Real" bond lengths
Fixed a few obscure bugs
Fixed "Real" / "Model" swapping and rotation-matching for things like XeF2
Significantly improved angle-based repulsion for the "Real" molecules
Fixed "kit" radio button clicking bug
Added "Basics" support for 2nd tab
# 1.01.14 (59229) Dec 9, 2011
12/9/11 dev version for Mac testing
Added white background with black text for kit version of 2nd tab
Subscript fixes for kit version of 2nd tab
Tab handling fixes
# 1.01.13 (59114) Dec 6, 2011
12/6/11 Added Real / Model views and rotational matching between them, along with kit-version of 2nd tab